camunda8 - v2/optimize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: optimize
  labels:
    app: optimize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: optimize
  template:
    metadata:
      labels:
        app: optimize
    spec:
      containers:
        - name: optimize
          image: docker.io/camunda/optimize:8.7.9
          ports:
            - name: http
              containerPort: 8080
